--- a/_config.yml
+++ b/_config.yml
@@ -15,16 +15,16 @@
 # in the templates via {{ site.myvariable }}.
 #theme: jekyll-theme-so-simple
 remote_theme: mmistakes/so-simple-theme
-locale: en-US
+locale: en-GB
 title: "Haresh G"
 description: "Hello World!"
 baseurl: # the subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: "hgedia.co"
 logo: # path of site logo, e.g. "/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
 words_per_minute: # 200
-mathjax: # MathJax equations, e.g. true
+mathjax: true
 google_fonts:
   - name: "Source Sans Pro"
     weights: "400,400i,700,700i"
@@ -51,7 +51,7 @@ feed:
 # paginate_path: /page:num/
 
 # Search
-search_full_content: false # can have performance implications for large sites
+search_full_content: true # can have performance implications for large sites
 
 # Taxonomy pages
 # category_archive_path: "/categories/#"
@@ -84,20 +84,29 @@ defaults:
     values:
       layout: post
       share: true
-
+      
 # Site Author
 author:
-  name:
+  name: Haresh G
   picture:
   email:
-  twitter:
+  twitter: h_gedia
   links:
     - title:
       url:
       icon:
 
 # Footer Links
+# Footer Links
 footer_links:
-  - title: Feed
-    url: atom.xml
-    icon: fas fa-rss-square
+  - title: Twitter
+    url: https://twitter.com/h_gedia
+    icon: fab fa-twitter-square
+  - title: GitHub
+    url: https://github.com/hgedia
+    icon: fab fa-github-square
+
+
+#Haresh
+include: ["_pages"]
+    
