--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,16 @@
-# Sample site navigation links
-
 - title: Home
   url: /index
-- title: Writing
+- title: Posts
   url: /posts/
 - title: CV
   url: /CV/
-# - title: Recipes
-#   url: /recipes/
+- title: Categories
+  url: /categories/
+- title: Tags
+  url: /tags/
+- title: Resources
+  url : /resources/  
+- title: Contact
+  url : /contact/   
 - title: Search
   url: /search
