--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ name : "Haresh Gedia"
 title: ""
 description: ""
 baseurl: # the subpath of your site, e.g. "/blog"
-url: "hgedia.co"
+url: "http://hgedia.co"
 logo: "assets/images/picadilly.jpg"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
