Updating more structure

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title: ""
 description: ""
 baseurl: # the subpath of your site, e.g. "/blog"
 url: "http://hgedia.co"
-logo: "assets/images/picadilly.jpg"
+#logo: "assets/images/picadilly.jpg"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
 words_per_minute: # 200
